--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -65,6 +65,16 @@
                     onkeyup="filterEvents()">
             <span id="searchCount" class="search-count"></span>
         </div>
+
+        <!-- Filter Checkbox -->
+        <div class="filter-controls mt-3 text-center">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="hideCancelledCheckbox" onchange="filterEvents()">
+                <label class="form-check-label" for="hideCancelledCheckbox">
+                    Hide cancelled events
+                </label>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -75,7 +85,8 @@
          th:attr="data-bs-toggle='modal', data-bs-target='#detailsModal-' + ${event.id},
                       data-name=${event.name},
                       data-location=${event.location},
-                      data-description=${event.description}">
+                      data-description=${event.description},
+                      data-status=${event.status}">
         <div class="row g-0 align-items-center">
             <!--Left: Image-->
             <div class="col-md-3">
